dvc: commit experiment c4f95114590f261727a508ea767f9e922454582186655fe02a15b789909e1c17

--- a/plots.html
+++ b/plots.html
@@ -16,182 +16,356 @@
     {
         "precision": 0.021473008227975116,
         "recall": 1.0,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.0
     },
     {
         "precision": 0.07219662058371736,
         "recall": 0.8785046728971962,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.02
     },
     {
         "precision": 0.16322701688555347,
         "recall": 0.8130841121495327,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.04
     },
     {
         "precision": 0.25477707006369427,
         "recall": 0.7476635514018691,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.06
     },
     {
         "precision": 0.3391304347826087,
         "recall": 0.7289719626168224,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.08
     },
     {
         "precision": 0.3989071038251366,
         "recall": 0.6822429906542056,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.1
     },
     {
         "precision": 0.4268292682926829,
         "recall": 0.6542056074766355,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.12
     },
     {
         "precision": 0.4520547945205479,
         "recall": 0.616822429906542,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.14
     },
     {
         "precision": 0.4925373134328358,
         "recall": 0.616822429906542,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.16
     },
     {
         "precision": 0.5333333333333333,
         "recall": 0.5981308411214953,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.18
     },
     {
         "precision": 0.5727272727272728,
         "recall": 0.5887850467289719,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.2
     },
     {
         "precision": 0.6039603960396039,
         "recall": 0.5700934579439252,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.22
     },
     {
         "precision": 0.6263736263736264,
         "recall": 0.5327102803738317,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.24
     },
     {
         "precision": 0.6506024096385542,
         "recall": 0.5046728971962616,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.26
     },
     {
         "precision": 0.6666666666666666,
         "recall": 0.4672897196261682,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.28
     },
     {
         "precision": 0.6428571428571429,
         "recall": 0.4205607476635514,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.3
     },
     {
         "precision": 0.676923076923077,
         "recall": 0.411214953271028,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.32
     },
     {
         "precision": 0.6885245901639344,
         "recall": 0.3925233644859813,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.34
     },
     {
         "precision": 0.6909090909090909,
         "recall": 0.35514018691588783,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.36
     },
     {
         "precision": 0.7058823529411765,
         "recall": 0.3364485981308411,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.38
     },
     {
         "precision": 0.7368421052631579,
         "recall": 0.2616822429906542,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.4
     },
     {
         "precision": 0.7931034482758621,
         "recall": 0.21495327102803738,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.42
     },
     {
         "precision": 0.8,
         "recall": 0.18691588785046728,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.44
     },
     {
         "precision": 0.8235294117647058,
         "recall": 0.1308411214953271,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.46
     },
     {
         "precision": 1.0,
         "recall": 0.08411214953271028,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.48
     },
     {
         "precision": 1.0,
         "recall": 0.06542056074766354,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.5
     },
     {
         "precision": 1.0,
         "recall": 0.056074766355140186,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.52
     },
     {
         "precision": 1.0,
         "recall": 0.04672897196261682,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.56
     },
     {
         "precision": 1.0,
         "recall": 0.018691588785046728,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.58
     },
     {
         "precision": 1.0,
         "recall": 0.009345794392523364,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.6
+    },
+    {
+        "precision": 0.021473008227975116,
+        "recall": 1.0,
+        "rev": "workspace",
+        "threshold": 0.0
+    },
+    {
+        "precision": 0.06742370475514549,
+        "recall": 0.8878504672897196,
+        "rev": "workspace",
+        "threshold": 0.02
+    },
+    {
+        "precision": 0.14858096828046743,
+        "recall": 0.8317757009345794,
+        "rev": "workspace",
+        "threshold": 0.04
+    },
+    {
+        "precision": 0.2420749279538905,
+        "recall": 0.7850467289719626,
+        "rev": "workspace",
+        "threshold": 0.06
+    },
+    {
+        "precision": 0.3134920634920635,
+        "recall": 0.7383177570093458,
+        "rev": "workspace",
+        "threshold": 0.08
+    },
+    {
+        "precision": 0.3979591836734694,
+        "recall": 0.7289719626168224,
+        "rev": "workspace",
+        "threshold": 0.1
+    },
+    {
+        "precision": 0.4411764705882353,
+        "recall": 0.7009345794392523,
+        "rev": "workspace",
+        "threshold": 0.12
+    },
+    {
+        "precision": 0.48,
+        "recall": 0.6728971962616822,
+        "rev": "workspace",
+        "threshold": 0.14
+    },
+    {
+        "precision": 0.5190839694656488,
+        "recall": 0.6355140186915887,
+        "rev": "workspace",
+        "threshold": 0.16
+    },
+    {
+        "precision": 0.5454545454545454,
+        "recall": 0.616822429906542,
+        "rev": "workspace",
+        "threshold": 0.18
+    },
+    {
+        "precision": 0.5596330275229358,
+        "recall": 0.5700934579439252,
+        "rev": "workspace",
+        "threshold": 0.2
+    },
+    {
+        "precision": 0.5833333333333334,
+        "recall": 0.5233644859813084,
+        "rev": "workspace",
+        "threshold": 0.22
+    },
+    {
+        "precision": 0.5862068965517241,
+        "recall": 0.4766355140186916,
+        "rev": "workspace",
+        "threshold": 0.24
+    },
+    {
+        "precision": 0.6233766233766234,
+        "recall": 0.4485981308411215,
+        "rev": "workspace",
+        "threshold": 0.26
+    },
+    {
+        "precision": 0.6515151515151515,
+        "recall": 0.40186915887850466,
+        "rev": "workspace",
+        "threshold": 0.28
+    },
+    {
+        "precision": 0.6724137931034483,
+        "recall": 0.3644859813084112,
+        "rev": "workspace",
+        "threshold": 0.3
+    },
+    {
+        "precision": 0.7045454545454546,
+        "recall": 0.2897196261682243,
+        "rev": "workspace",
+        "threshold": 0.32
+    },
+    {
+        "precision": 0.7435897435897436,
+        "recall": 0.27102803738317754,
+        "rev": "workspace",
+        "threshold": 0.34
+    },
+    {
+        "precision": 0.7575757575757576,
+        "recall": 0.2336448598130841,
+        "rev": "workspace",
+        "threshold": 0.36
+    },
+    {
+        "precision": 0.7241379310344828,
+        "recall": 0.19626168224299065,
+        "rev": "workspace",
+        "threshold": 0.38
+    },
+    {
+        "precision": 0.7391304347826086,
+        "recall": 0.1588785046728972,
+        "rev": "workspace",
+        "threshold": 0.4
+    },
+    {
+        "precision": 0.7777777777777778,
+        "recall": 0.1308411214953271,
+        "rev": "workspace",
+        "threshold": 0.42
+    },
+    {
+        "precision": 0.7692307692307693,
+        "recall": 0.09345794392523364,
+        "rev": "workspace",
+        "threshold": 0.44
+    },
+    {
+        "precision": 0.7777777777777778,
+        "recall": 0.06542056074766354,
+        "rev": "workspace",
+        "threshold": 0.46
+    },
+    {
+        "precision": 0.7142857142857143,
+        "recall": 0.04672897196261682,
+        "rev": "workspace",
+        "threshold": 0.48
+    },
+    {
+        "precision": 0.75,
+        "recall": 0.028037383177570093,
+        "rev": "workspace",
+        "threshold": 0.5
+    },
+    {
+        "precision": 1.0,
+        "recall": 0.028037383177570093,
+        "rev": "workspace",
+        "threshold": 0.52
+    },
+    {
+        "precision": 1.0,
+        "recall": 0.018691588785046728,
+        "rev": "workspace",
+        "threshold": 0.56
+    },
+    {
+        "precision": 1.0,
+        "recall": 0.009345794392523364,
+        "rev": "workspace",
+        "threshold": 0.58
     }
 ]
     },
@@ -232,177 +406,351 @@
         "values": [
     {
         "fpr": 0.0,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 1.6,
         "tpr": 0.0
     },
     {
         "fpr": 0.0,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.6,
         "tpr": 0.009345794392523364
     },
     {
         "fpr": 0.0,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.58,
         "tpr": 0.018691588785046728
     },
     {
         "fpr": 0.0,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.56,
         "tpr": 0.04672897196261682
     },
     {
         "fpr": 0.0,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.5,
         "tpr": 0.06542056074766354
     },
     {
         "fpr": 0.0,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.48,
         "tpr": 0.08411214953271028
     },
     {
         "fpr": 0.0006152584085315833,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.46,
         "tpr": 0.1308411214953271
     },
     {
         "fpr": 0.001025430680885972,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.44,
         "tpr": 0.18691588785046728
     },
     {
         "fpr": 0.0012305168170631665,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.42,
         "tpr": 0.21495327102803738
     },
     {
         "fpr": 0.002050861361771944,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.4,
         "tpr": 0.2616822429906542
     },
     {
         "fpr": 0.0030762920426579163,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.38,
         "tpr": 0.3364485981308411
     },
     {
         "fpr": 0.003486464315012305,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.36,
         "tpr": 0.35514018691588783
     },
     {
         "fpr": 0.003896636587366694,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.34,
         "tpr": 0.3925233644859813
     },
     {
         "fpr": 0.004306808859721083,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.32,
         "tpr": 0.411214953271028
     },
     {
         "fpr": 0.005127153404429861,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.3,
         "tpr": 0.4205607476635514
     },
     {
         "fpr": 0.005127153404429861,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.28,
         "tpr": 0.4672897196261682
     },
     {
         "fpr": 0.005947497949138638,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.26,
         "tpr": 0.5046728971962616
     },
     {
         "fpr": 0.00697292863002461,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.24,
         "tpr": 0.5327102803738317
     },
     {
         "fpr": 0.008203445447087777,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.22,
         "tpr": 0.5700934579439252
     },
     {
         "fpr": 0.009639048400328138,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.2,
         "tpr": 0.5887850467289719
     },
     {
         "fpr": 0.011484823625922888,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.18,
         "tpr": 0.5981308411214953
     },
     {
         "fpr": 0.01394585726004922,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.16,
         "tpr": 0.616822429906542
     },
     {
         "fpr": 0.016406890894175553,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.14,
         "tpr": 0.616822429906542
     },
     {
         "fpr": 0.019278096800656275,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.12,
         "tpr": 0.6542056074766355
     },
     {
         "fpr": 0.022559474979491387,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.1,
         "tpr": 0.6822429906542056
     },
     {
         "fpr": 0.031173092698933553,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.08,
         "tpr": 0.7289719626168224
     },
     {
         "fpr": 0.04799015586546349,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.06,
         "tpr": 0.7476635514018691
     },
     {
         "fpr": 0.09146841673502872,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.04,
         "tpr": 0.8130841121495327
     },
     {
         "fpr": 0.24774405250205087,
-        "rev": "workspace",
+        "rev": "HEAD",
         "threshold": 0.02,
         "tpr": 0.8785046728971962
+    },
+    {
+        "fpr": 1.0,
+        "rev": "HEAD",
+        "threshold": 0.0,
+        "tpr": 1.0
+    },
+    {
+        "fpr": 0.0,
+        "rev": "workspace",
+        "threshold": 1.58,
+        "tpr": 0.0
+    },
+    {
+        "fpr": 0.0,
+        "rev": "workspace",
+        "threshold": 0.58,
+        "tpr": 0.009345794392523364
+    },
+    {
+        "fpr": 0.0,
+        "rev": "workspace",
+        "threshold": 0.52,
+        "tpr": 0.028037383177570093
+    },
+    {
+        "fpr": 0.00020508613617719443,
+        "rev": "workspace",
+        "threshold": 0.5,
+        "tpr": 0.028037383177570093
+    },
+    {
+        "fpr": 0.00041017227235438887,
+        "rev": "workspace",
+        "threshold": 0.48,
+        "tpr": 0.04672897196261682
+    },
+    {
+        "fpr": 0.00041017227235438887,
+        "rev": "workspace",
+        "threshold": 0.46,
+        "tpr": 0.06542056074766354
+    },
+    {
+        "fpr": 0.0006152584085315833,
+        "rev": "workspace",
+        "threshold": 0.44,
+        "tpr": 0.09345794392523364
+    },
+    {
+        "fpr": 0.0008203445447087777,
+        "rev": "workspace",
+        "threshold": 0.42,
+        "tpr": 0.1308411214953271
+    },
+    {
+        "fpr": 0.0012305168170631665,
+        "rev": "workspace",
+        "threshold": 0.4,
+        "tpr": 0.1588785046728972
+    },
+    {
+        "fpr": 0.0016406890894175555,
+        "rev": "workspace",
+        "threshold": 0.38,
+        "tpr": 0.19626168224299065
+    },
+    {
+        "fpr": 0.0016406890894175555,
+        "rev": "workspace",
+        "threshold": 0.36,
+        "tpr": 0.2336448598130841
+    },
+    {
+        "fpr": 0.002050861361771944,
+        "rev": "workspace",
+        "threshold": 0.34,
+        "tpr": 0.27102803738317754
+    },
+    {
+        "fpr": 0.0026661197703035273,
+        "rev": "workspace",
+        "threshold": 0.32,
+        "tpr": 0.2897196261682243
+    },
+    {
+        "fpr": 0.003896636587366694,
+        "rev": "workspace",
+        "threshold": 0.3,
+        "tpr": 0.3644859813084112
+    },
+    {
+        "fpr": 0.0047169811320754715,
+        "rev": "workspace",
+        "threshold": 0.28,
+        "tpr": 0.40186915887850466
+    },
+    {
+        "fpr": 0.005947497949138638,
+        "rev": "workspace",
+        "threshold": 0.26,
+        "tpr": 0.4485981308411215
+    },
+    {
+        "fpr": 0.007383100902378999,
+        "rev": "workspace",
+        "threshold": 0.24,
+        "tpr": 0.4766355140186916
+    },
+    {
+        "fpr": 0.008203445447087777,
+        "rev": "workspace",
+        "threshold": 0.22,
+        "tpr": 0.5233644859813084
+    },
+    {
+        "fpr": 0.009844134536505332,
+        "rev": "workspace",
+        "threshold": 0.2,
+        "tpr": 0.5700934579439252
+    },
+    {
+        "fpr": 0.011279737489745693,
+        "rev": "workspace",
+        "threshold": 0.18,
+        "tpr": 0.616822429906542
+    },
+    {
+        "fpr": 0.012920426579163249,
+        "rev": "workspace",
+        "threshold": 0.16,
+        "tpr": 0.6355140186915887
+    },
+    {
+        "fpr": 0.015996718621821164,
+        "rev": "workspace",
+        "threshold": 0.14,
+        "tpr": 0.6728971962616822
+    },
+    {
+        "fpr": 0.01948318293683347,
+        "rev": "workspace",
+        "threshold": 0.12,
+        "tpr": 0.7009345794392523
+    },
+    {
+        "fpr": 0.02420016406890894,
+        "rev": "workspace",
+        "threshold": 0.1,
+        "tpr": 0.7289719626168224
+    },
+    {
+        "fpr": 0.03547990155865464,
+        "rev": "workspace",
+        "threshold": 0.08,
+        "tpr": 0.7383177570093458
+    },
+    {
+        "fpr": 0.05393765381460213,
+        "rev": "workspace",
+        "threshold": 0.06,
+        "tpr": 0.7850467289719626
+    },
+    {
+        "fpr": 0.10459392945036916,
+        "rev": "workspace",
+        "threshold": 0.04,
+        "tpr": 0.8317757009345794
+    },
+    {
+        "fpr": 0.2694831829368335,
+        "rev": "workspace",
+        "threshold": 0.02,
+        "tpr": 0.8878504672897196
     },
     {
         "fpr": 1.0,
